--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -226,6 +226,14 @@ config CPU_FREQ_GOV_ONDEMANDX
 
 	  If in doubt, say N.
 
+config CPU_FREQ_VDD_LEVELS
+  	bool "CPU Vdd levels sysfs interface"
+  	depends on CPU_FREQ_STAT
+  	depends on ARCH_MSM7X30
+  	default n
+ 	help
+    	CPU Vdd levels sysfs interface
+
 config CPU_FREQ_GOV_ONDEMANDX_INPUT
 	bool "Ramp up CPU frequency on input events"
 	default y
