--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -189,6 +189,12 @@ config CPU_FREQ_GOV_INTERACTIVE
 	  For details, take a look at linux/Documentation/cpu-freq.
 	  If in doubt, say N.
 
+config CPU_FREQ_GOV_SMARTASS2
+	  tristate "'smartassV2' cpufreq governor"
+	  depends on CPU_FREQ
+	  help
+            'Use smartass2 governer'
+
 config CPU_FREQ_GOV_CONSERVATIVE
 	tristate "'conservative' cpufreq governor"
 	depends on CPU_FREQ
