config: Updated to v0.9

--- a/arch/arm/configs/ltx_defconfig
+++ b/arch/arm/configs/ltx_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.66 Kernel Configuration
+# Linux/arm 3.0.69 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -35,7 +35,7 @@ CONFIG_EXPERIMENTAL=y
 CONFIG_BROKEN_ON_SMP=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-LTX-Kernel-JB-v0.8"
+CONFIG_LOCALVERSION="-LTX-Kernel-JB-v0.9"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -369,19 +369,19 @@ CONFIG_HTC_BATTCHG_SMEM=y
 # CONFIG_MSM_SERIAL_DEBUGGER is not set
 CONFIG_MSM_PROC_COMM=y
 CONFIG_MSM_SMD=y
-CONFIG_MSM_SMD_PKG3=y
-# CONFIG_MSM_SMD_PKG4 is not set
-CONFIG_MSM_SMD0_WQ=y
-CONFIG_MSM_SMD_DEBUG=y
+# CONFIG_MSM_SMD_PKG3 is not set
+CONFIG_MSM_SMD_PKG4=y
+# CONFIG_MSM_SMD0_WQ is not set
+# CONFIG_MSM_SMD_DEBUG is not set
 # CONFIG_MSM_SDIO_AL is not set
 CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
-CONFIG_MSM_RESET_MODEM=m
+CONFIG_MSM_RESET_MODEM=y
 CONFIG_MSM_SMD_LOGGING=y
-CONFIG_MSM_SMD_NMEA=y
-CONFIG_MSM_SMD_TTY=y
-CONFIG_MSM_SMD_QMI=y
-CONFIG_MSM_SMD_PKT=y
+# CONFIG_MSM_SMD_NMEA is not set
+# CONFIG_MSM_SMD_TTY is not set
+# CONFIG_MSM_SMD_QMI is not set
+# CONFIG_MSM_SMD_PKT is not set
 CONFIG_MSM_ONCRPCROUTER=y
 # CONFIG_MSM_IPC_ROUTER is not set
 CONFIG_MSM_ONCRPCROUTER_DEBUG=y
@@ -410,7 +410,7 @@ CONFIG_HTC_OFFMODE_ALARM=y
 CONFIG_HTC_QUICKBOOT_OFFMODE_ALARM=y
 CONFIG_RTAC=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
-CONFIG_MSM_DMA_TEST=m
+CONFIG_MSM_DMA_TEST=y
 CONFIG_WIFI_CONTROL_FUNC=y
 CONFIG_WIFI_MEM_PREALLOC=y
 CONFIG_WIFI_NVS_PROC_CREATE=y
@@ -508,9 +508,9 @@ CONFIG_ARM_DMA_MEM_BUFFERABLE=y
 # CONFIG_STRICT_MEMORY_RWX is not set
 CONFIG_RESERVE_FIRST_PAGE=y
 CONFIG_CPU_HAS_PMU=y
-# CONFIG_ARM_ERRATA_430973 is not set
-# CONFIG_ARM_ERRATA_458693 is not set
-# CONFIG_ARM_ERRATA_460075 is not set
+CONFIG_ARM_ERRATA_430973=y
+CONFIG_ARM_ERRATA_458693=y
+CONFIG_ARM_ERRATA_460075=y
 # CONFIG_ARM_ERRATA_743622 is not set
 # CONFIG_ARM_ERRATA_754322 is not set
 # CONFIG_KSAPI is not set
@@ -567,7 +567,7 @@ CONFIG_MIGRATION=y
 CONFIG_ZONE_DMA_FLAG=0
 CONFIG_BOUNCE=y
 CONFIG_VIRT_TO_BUS=y
-# CONFIG_KSM is not set
+CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_NEED_PER_CPU_KM=y
 # CONFIG_CLEANCACHE is not set
@@ -585,7 +585,7 @@ CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_CC_STACKPROTECTOR is not set
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 # CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART is not set
-CONFIG_CP_ACCESS=m
+CONFIG_CP_ACCESS=y
 
 #
 # Boot options
@@ -702,7 +702,7 @@ CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
 CONFIG_INET=y
-# CONFIG_IP_MULTICAST is not set
+CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 # CONFIG_IP_FIB_TRIE_STATS is not set
 CONFIG_IP_MULTIPLE_TABLES=y
@@ -714,6 +714,7 @@ CONFIG_IP_PNP=y
 # CONFIG_IP_PNP_RARP is not set
 # CONFIG_NET_IPIP is not set
 # CONFIG_NET_IPGRE_DEMUX is not set
+# CONFIG_IP_MROUTE is not set
 CONFIG_LARGE_TCP_INITIAL_BUFFER=y
 # CONFIG_ARPD is not set
 # CONFIG_SYN_COOKIES is not set
@@ -1007,7 +1008,7 @@ CONFIG_NET_SCH_FIFO=y
 # CONFIG_DCB is not set
 # CONFIG_BATMAN_ADV is not set
 CONFIG_HAVE_BPF_JIT=y
-# CONFIG_BPF_JIT is not set
+CONFIG_BPF_JIT=y
 
 #
 # Network testing
@@ -1033,7 +1034,7 @@ CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_H4=y
 # CONFIG_BT_HCIUART_BCSP is not set
 # CONFIG_BT_HCIUART_ATH3K is not set
-# CONFIG_BT_HCIUART_LL is not set
+CONFIG_BT_HCIUART_LL=y
 # CONFIG_BT_HCIUART_IBS is not set
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
@@ -1067,7 +1068,7 @@ CONFIG_RFKILL_PM=y
 CONFIG_RFKILL_LEDS=y
 # CONFIG_RFKILL_INPUT is not set
 # CONFIG_RFKILL_REGULATOR is not set
-# CONFIG_RFKILL_GPIO is not set
+CONFIG_RFKILL_GPIO=y
 # CONFIG_NET_9P is not set
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
@@ -1079,7 +1080,7 @@ CONFIG_RFKILL_LEDS=y
 #
 # Generic Driver Options
 #
-CONFIG_UEVENT_HELPER_PATH=""
+CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
 # CONFIG_DEVTMPFS is not set
 CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
@@ -1251,11 +1252,11 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_ZERO is not set
 # CONFIG_DM_MULTIPATH is not set
 # CONFIG_DM_DELAY is not set
-# CONFIG_DM_UEVENT is not set
+CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
 # CONFIG_TARGET_CORE is not set
 CONFIG_NETDEVICES=y
-# CONFIG_IFB is not set
+CONFIG_IFB=y
 CONFIG_DUMMY=y
 # CONFIG_BONDING is not set
 # CONFIG_MACVLAN is not set
@@ -1320,7 +1321,7 @@ CONFIG_MSM_RMNET=y
 # CONFIG_NETPOLL is not set
 # CONFIG_NET_POLL_CONTROLLER is not set
 # CONFIG_HTC_NETWORK_MODIFY is not set
-CONFIG_KINETO_GAN=m
+CONFIG_KINETO_GAN=y
 # CONFIG_ISDN is not set
 # CONFIG_PHONE is not set
 
@@ -1956,7 +1957,7 @@ CONFIG_MSM_KGSL=y
 CONFIG_MSM_KGSL_2D=y
 # CONFIG_KGSL_PER_PROCESS_PAGE_TABLE is not set
 CONFIG_MSM_KGSL_PAGE_TABLE_SIZE=0xFFF0000
-CONFIG_MSM_KGSL_MMU_PAGE_FAULT=y
+# CONFIG_MSM_KGSL_MMU_PAGE_FAULT is not set
 # CONFIG_MSM_KGSL_DISABLE_SHADOW_WRITES is not set
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
@@ -2510,10 +2511,11 @@ CONFIG_ANDROID_EVENTS_LOG_SIZE=256
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
-# CONFIG_SNAPPY_COMPRESS is not set
-# CONFIG_SNAPPY_DECOMPRESS is not set
-# CONFIG_XVMALLOC is not set
-# CONFIG_ZRAM is not set
+CONFIG_SNAPPY_COMPRESS=y
+CONFIG_SNAPPY_DECOMPRESS=y
+CONFIG_XVMALLOC=y
+CONFIG_ZRAM=y
+# CONFIG_ZRAM_DEBUG is not set
 # CONFIG_FB_SM7XX is not set
 CONFIG_MACH_NO_WESTBRIDGE=y
 # CONFIG_ATH6K_LEGACY is not set
@@ -2737,7 +2739,7 @@ CONFIG_DEBUG_INFO=y
 # CONFIG_BOOT_PRINTK_DELAY is not set
 # CONFIG_RCU_TORTURE_TEST is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
-CONFIG_RCU_CPU_STALL_VERBOSE=y
+# CONFIG_RCU_CPU_STALL_VERBOSE is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_DEBUG_BLOCK_EXT_DEVT is not set
 # CONFIG_DEBUG_FORCE_WEAK_PER_CPU is not set
@@ -2825,7 +2827,7 @@ CONFIG_CRYPTO_HMAC=y
 #
 CONFIG_CRYPTO_CRC32C=y
 # CONFIG_CRYPTO_GHASH is not set
-# CONFIG_CRYPTO_MD4 is not set
+CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_MICHAEL_MIC is not set
 # CONFIG_CRYPTO_RMD128 is not set
@@ -2833,7 +2835,7 @@ CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_RMD256 is not set
 # CONFIG_CRYPTO_RMD320 is not set
 CONFIG_CRYPTO_SHA1=y
-# CONFIG_CRYPTO_SHA1_ARM is not set
+CONFIG_CRYPTO_SHA1_ARM=y
 CONFIG_CRYPTO_SHA256=y
 # CONFIG_CRYPTO_SHA512 is not set
 # CONFIG_CRYPTO_TGR192 is not set
@@ -2843,7 +2845,7 @@ CONFIG_CRYPTO_SHA256=y
 # Ciphers
 #
 CONFIG_CRYPTO_AES=y
-# CONFIG_CRYPTO_AES_ARM is not set
+CONFIG_CRYPTO_AES_ARM=y
 # CONFIG_CRYPTO_ANUBIS is not set
 CONFIG_CRYPTO_ARC4=y
 # CONFIG_CRYPTO_BLOWFISH is not set
